--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -26,8 +26,7 @@ defaults:
       layout: "default"
       image: "/assets/images/logo.png"
 
-enable_mathjax: true;
+#enable_mathjax: true;
 
-krandown:
-  math_engine: mathjax
-  
+#krandown:
+#  math_engine: mathjax
